infrastructure/k8s/crud-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: david-eini12-dev
  name: mongodb-crud
spec:
  selector:
    matchLabels:
      app: mongodb-crud
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb-crud
    spec:
      containers:
        - name: mongodb-crud
          image: avigoldshtein/crud-app-with-mongo:latest
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
