infrastructure/k8s/mongoDB-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: david-eini12-dev
spec:
  selector:
    matchLabels:
      app: mongodb-deployment
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb-deployment
    spec:
      containers:
      - image: docker.io/library/mongo:latest
        name: mongodb-deployment
        imagePullPolicy: Always
        ports:
        - containerPort: 27017
          name: mongo-port
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
