infrastructure/k8s/crud-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-crud-svc
  namespace: david-eini12-dev
spec:
  selector:
    app: mongodb-crud
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
