infrastructure/k8s/mongoDB-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: david-eini12-dev
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
